Added fastcgi-502 config parameters to prevent 502 errors

--- a/symfony.conf
+++ b/symfony.conf
@@ -13,7 +13,8 @@ server {
     }
 
     location ~ ^/(app|app_dev|config)\.php(/|$) {
-	include cors_support;
+	   include cors_support;
+        include fastcgi-502.conf;
         fastcgi_pass php-upstream;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
